--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,77 @@
-*~
 *.swp
-*.pyc
-*.project
-*.pydevproject
-.idea
-__pycache__
 dev
-build/
-dist/
-*egg-info
 recipe/
+
+
+# OS generated files #
+######################
+core
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.spyderworkspace
+*~
+
+# Python byproducts #
+#####################
+*.pyc
+build
+dist
+docs/_build
+*egg-info
+.settings
+pip-log.txt
+.ipynb_checkpoints
+
+# Other byproducts #
+####################
+.idea
+.project
+.spyderproject
+.pydevproject
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.egg
+*.egg-info
+dist
+include
+share
+build
+eggs
+parts
+#bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# LaTex generated files #
+#########################
+*.aux
+*.cls
+*.layout
+*.bst
