--- a/.github/workflows/algotom_ga.yml
+++ b/.github/workflows/algotom_ga.yml
@@ -5,9 +5,9 @@ name: Algotom_ga
 
 on:
   push:
-    branches: [master, dev]
+    branches: [master, dev, doc]
   pull_request:
-    branches: [master, dev]
+    branches: [master, dev, doc]
 
 jobs:
   build:
