--- a/.github/workflows/algotom_ga.yml
+++ b/.github/workflows/algotom_ga.yml
@@ -17,7 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.7", "3.8", "3.9.13", "3.10"]
+        python-version: ["3.7", "3.8", "3.8.16", "3.9.13", "3.10", "3.11" ]
+        exclude:
+          - os: macos-latest
+            python-version: "3.8"
+          - os: windows-latest
+            python-version: "3.8.16"
+          - os: ubuntu-latest
+            python-version: "3.8.16"
 
     steps:
     - uses: actions/checkout@v3
