--- a/.github/workflows/algotom_ga.yml
+++ b/.github/workflows/algotom_ga.yml
@@ -20,6 +20,8 @@ jobs:
         python-version: ["3.7", "3.8", "3.8.16", "3.9.13", "3.10", "3.11" ]
         exclude:
           - os: macos-latest
+            python-version: "3.7"
+          - os: macos-latest
             python-version: "3.8"
           - os: windows-latest
             python-version: "3.8.16"
