--- a/.github/workflows/algotom_ga.yml
+++ b/.github/workflows/algotom_ga.yml
@@ -17,10 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.7", "3.8", "3.8.16", "3.9.13", "3.10", "3.11" ]
+        python-version: ["3.8", "3.8.16", "3.9.13", "3.10", "3.11" ]
         exclude:
-          - os: macos-latest
-            python-version: "3.7"
           - os: macos-latest
             python-version: "3.8"
           - os: windows-latest
