--- a/.github/workflows/algotom_ga.yml
+++ b/.github/workflows/algotom_ga.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        python setup.py install
+        pip install .
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi        
     - name: Lint with flake8
       run: |
