--- a/.github/workflows/algotom_ga.yml
+++ b/.github/workflows/algotom_ga.yml
@@ -49,9 +49,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        pip install .
+        python${{ matrix.python-version }} -m pip install --upgrade pip
+        python${{ matrix.python-version }} -m pip install flake8 pytest
+        python${{ matrix.python-version }} -m pip install .
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi        
     - name: Lint with flake8
       run: |
