--- a/.github/workflows/algotom_ga.yml
+++ b/.github/workflows/algotom_ga.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.8.10", "3.9", "3.9.13", "3.10", "3.11" ]
+        python-version: ["3.8", "3.8.10", "3.9", "3.9.13", "3.10", "3.11", "3.12"]
         exclude:
           - os: macos-latest
             python-version: "3.8"
